--- a/Q.3
+++ b/Q.3
@@ -34,6 +34,7 @@ int main ()
     third->data=8;
     third->next=NULL;
     
+	printf("Traversing Linked List and printing its elements\n");
     Traverse(head);    
 
     return 0;
