--- a/Q.4
+++ b/Q.4
@@ -17,16 +17,23 @@ void Print_Linked_List(struct Node *ptr)
 {
     while(ptr != NULL)
     {
-        printf("%d\n",ptr->data);
+        printf("%d ",ptr->data);
         ptr=ptr->next;
     }
 }
 int main ()
 {
-    int arr[5]={10,20,30,40,50};
+    int n;
+	printf("Enter number of Elements of array\n");
+	scanf("%d",&n);
+	int arr[n];
+	for(int i=0;i<n;i++)
+	{
+		scanf("%d",&arr[i]);
+	}
     struct Node *head,*ptr;
     struct Node* ptr1 = (struct Node*)malloc(sizeof(struct Node));
-    for(int i=0;i<5;i++)
+    for(int i=0;i<n;i++)
     {
         if(i==0)
         {
@@ -42,5 +49,8 @@ int main ()
     }
     printf("Converted Array to Linked List\n");
     Print_Linked_List(head);
+	free(ptr1);
+	free(ptr);
+	free(head);
     return 0;
 }
