--- a/Q.4
+++ b/Q.4
@@ -26,6 +26,7 @@ int main ()
     int n;
 	printf("Enter number of Elements of array\n");
 	scanf("%d",&n);
+	printf("Enter elements\n");
 	int arr[n];
 	for(int i=0;i<n;i++)
 	{
